isNull and nonNull elimination